--- a/src/app/app.html
+++ b/src/app/app.html
@@ -188,6 +188,7 @@
       <h1>Hello, {{ title() }}</h1>
       <app-counter></app-counter>
       <app-student-table></app-student-table>
+      <app-item-card></app-item-card>
     </div>
   </div>
 </main>
