--- a/src/app/item-card/item-card.html
+++ b/src/app/item-card/item-card.html
@@ -1,1 +1,10 @@
-<p>Item Name : iPhone 16</p>
+<h2>Item Card</h2>
+<p>Item Name : iPhone 16</p><br>
+<p>Item Price : $1199</p><br>
+<p>Item Description : The latest iPhone with advanced features.</p>
+<button (click)="addToCart()">Add to Cart</button>
+<>
+<app-counter></app-counter>
+
+
+
