--- a/src/app/student-table/student-table.html
+++ b/src/app/student-table/student-table.html
@@ -1,5 +1,6 @@
 <h2>Student CRUD</h2>
-<a routerLink="/login">Go to Login</a>
+<nav><a routerLink="/login" routerlinkactive="active">Go to Login</a></nav>
+<!-- <a routerLink="/login" routerlinkactive="active">Go to Login</a> -->
 <table cellpadding="10" border="1">
     <tr>
         <th>Roll No</th>
